# medical-learning-assistant

./: .gitignore  README.md  pyproject.toml
backend/: config.py  main.py
backend/agents/: document_processor.py  pubmed_search.py  query_analyzer.py  retrieval.py  synthesis.py
backend/database/: init.sql  mysql_db.py  pinecone_db.py
frontend/: index.html  scripts.js  styles.css
